// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`portal role & permission guards > matches role snapshots 1`] = `
<div>
  <aside
    class="sidebar "
  >
    <div
      class="sidebar__header"
    >
      <span>
        BF
         Portal
      </span>
      <button
        aria-label="Close navigation"
        class="sidebar__close"
        type="button"
      >
        ×
      </button>
    </div>
    <nav
      class="sidebar__nav"
    >
      <div
        class="mb-4"
      >
        <a
          class="sidebar__link "
          href="/dashboard"
        >
          Dashboard
        </a>
        <a
          class="sidebar__link "
          href="/applications"
        >
          Applications
        </a>
        <a
          class="sidebar__link "
          href="/crm"
        >
          CRM
        </a>
        <a
          class="sidebar__link "
          href="/leads"
        >
          Leads
        </a>
        <a
          class="sidebar__link "
          href="/communications"
        >
          Communications
        </a>
        <a
          class="sidebar__link "
          href="/portal/readiness"
        >
          Readiness Leads
        </a>
        <a
          class="sidebar__link "
          href="/continuations"
        >
          Capital Readiness
        </a>
        <a
          class="sidebar__link "
          href="/chat"
        >
          Live Chat
        </a>
        <a
          class="sidebar__link "
          href="/ai-chat"
        >
          AI Chat
        </a>
        <a
          class="sidebar__link "
          href="/ai-comms"
        >
          AI Comms
        </a>
        <a
          class="sidebar__link "
          href="/issues"
        >
          Issues
        </a>
        <a
          class="sidebar__link "
          href="/calendar"
        >
          Calendar
        </a>
        <a
          class="sidebar__link "
          href="/marketing"
        >
          Marketing
        </a>
        <a
          class="sidebar__link "
          href="/lenders"
        >
          Lenders
        </a>
        <a
          class="sidebar__link "
          href="/settings"
        >
          Settings
        </a>
      </div>
      <div
        class="mb-4"
      >
        <p
          class="px-2 pb-2 text-xs font-semibold uppercase tracking-wide text-slate-500"
        >
          AI & Support
        </p>
        <a
          class="sidebar__link "
          href="/admin/ai"
        >
          AI Knowledge
        </a>
        <a
          class="sidebar__link "
          href="/admin/support"
        >
          Support
        </a>
        <a
          class="sidebar__link "
          href="/admin/analytics"
        >
          Analytics
        </a>
        <a
          class="sidebar__link "
          href="/admin/analytics-events"
        >
          Analytics Events
        </a>
        <a
          class="sidebar__link "
          href="/admin/website-leads"
        >
          Website Leads
        </a>
        <a
          class="sidebar__link "
          href="/admin/leads"
        >
          Website Leads Table
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai-knowledge"
        >
          AI Knowledge Base
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai-knowledge-upload"
        >
          AI Knowledge Upload
        </a>
        <a
          class="sidebar__link "
          href="/admin/comparison"
        >
          Comparison Editor
        </a>
        <a
          class="sidebar__link "
          href="/admin/issue-reports"
        >
          Issue Reports
        </a>
        <a
          class="sidebar__link "
          href="/admin/live-chat"
        >
          Live Chat Queue
        </a>
        <a
          class="sidebar__link "
          href="/admin/conversions"
        >
          Conversions
        </a>
        <a
          class="sidebar__link "
          href="/portal/ai"
        >
          AI Live Chat
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai/chats"
        >
          Chats
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai-policy"
        >
          AI Policy
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai/issues"
        >
          Issues
        </a>
        <a
          class="sidebar__link "
          href="/admin/operations"
        >
          Operations
        </a>
        <a
          class="sidebar__link "
          href="/admin/maya"
        >
          Maya Intelligence
        </a>
        <a
          class="sidebar__link "
          href="/admin/maya-outbound"
        >
          Maya Outbound Upload
        </a>
      </div>
    </nav>
  </aside>
</div>
`;

exports[`portal role & permission guards > matches role snapshots 2`] = `
<div>
  <aside
    class="sidebar "
  >
    <div
      class="sidebar__header"
    >
      <span>
        BF
         Portal
      </span>
      <button
        aria-label="Close navigation"
        class="sidebar__close"
        type="button"
      >
        ×
      </button>
    </div>
    <nav
      class="sidebar__nav"
    >
      <div
        class="mb-4"
      >
        <a
          class="sidebar__link "
          href="/dashboard"
        >
          Dashboard
        </a>
        <a
          class="sidebar__link "
          href="/applications"
        >
          Applications
        </a>
        <a
          class="sidebar__link "
          href="/crm"
        >
          CRM
        </a>
        <a
          class="sidebar__link "
          href="/leads"
        >
          Leads
        </a>
        <a
          class="sidebar__link "
          href="/communications"
        >
          Communications
        </a>
        <a
          class="sidebar__link "
          href="/portal/readiness"
        >
          Readiness Leads
        </a>
        <a
          class="sidebar__link "
          href="/continuations"
        >
          Capital Readiness
        </a>
        <a
          class="sidebar__link "
          href="/chat"
        >
          Live Chat
        </a>
        <a
          class="sidebar__link "
          href="/ai-chat"
        >
          AI Chat
        </a>
        <a
          class="sidebar__link "
          href="/ai-comms"
        >
          AI Comms
        </a>
        <a
          class="sidebar__link "
          href="/issues"
        >
          Issues
        </a>
        <a
          class="sidebar__link "
          href="/calendar"
        >
          Calendar
        </a>
        <a
          class="sidebar__link "
          href="/marketing"
        >
          Marketing
        </a>
        <a
          class="sidebar__link "
          href="/lenders"
        >
          Lenders
        </a>
        <a
          class="sidebar__link "
          href="/settings"
        >
          Settings
        </a>
      </div>
      <div
        class="mb-4"
      >
        <p
          class="px-2 pb-2 text-xs font-semibold uppercase tracking-wide text-slate-500"
        >
          AI & Support
        </p>
        <a
          class="sidebar__link "
          href="/portal/ai"
        >
          AI Live Chat
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai/chats"
        >
          Chats
        </a>
        <a
          class="sidebar__link "
          href="/admin/ai/issues"
        >
          Issues
        </a>
      </div>
    </nav>
  </aside>
</div>
`;

exports[`portal role & permission guards > matches role snapshots 3`] = `
<div>
  <div
    class="lender-shell"
  >
    <aside
      class="lender-sidebar"
    >
      <div
        class="lender-sidebar__brand"
      >
        <div
          aria-hidden="true"
          class="lender-sidebar__logo"
        >
          ⛰️
        </div>
        <div>
          <div
            class="lender-sidebar__title"
          >
            Lender Portal
          </div>
          <div
            class="lender-sidebar__subtitle"
          />
        </div>
      </div>
      <nav
        class="lender-sidebar__nav"
      >
        <a
          aria-current="page"
          class="lender-nav-link lender-nav-link--active"
          href="/lender/products"
        >
          My Products
        </a>
      </nav>
    </aside>
    <div
      class="lender-shell__content"
    >
      <header
        class="lender-topbar"
      >
        <div>
          <div
            class="lender-topbar__title"
          >
            Welcome back
          </div>
          <div
            class="lender-topbar__subtitle"
          >
            Manage your lender profile and offers
          </div>
        </div>
        <div
          class="lender-topbar__user"
        >
          <div
            class="lender-avatar"
          >
            L
          </div>
          <div
            class="lender-topbar__user-meta"
          >
            <span
              class="lender-topbar__user-name"
            />
            <span
              class="lender-topbar__user-role"
            >
              Lender
            </span>
          </div>
          <button
            class="ui-button ui-button--ghost"
            type="button"
          >
            Logout
          </button>
        </div>
      </header>
      <main
        class="lender-shell__main"
      >
        <div>
          Products
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`portal role & permission guards > matches role snapshots 4`] = `
<div>
  <aside
    class="sidebar "
  >
    <div
      class="sidebar__header"
    >
      <span>
        BF
         Portal
      </span>
      <button
        aria-label="Close navigation"
        class="sidebar__close"
        type="button"
      >
        ×
      </button>
    </div>
    <nav
      class="sidebar__nav"
    />
  </aside>
</div>
`;
